src/objects/CBClusterRule__c.object
<CustomObject>
    <fields>
        <fullName>Index__c</fullName>
        <displayFormat>R-{00}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Level1__c</fullName>
        <defaultValue>&apos;cblight__CBDivision__c&apos;</defaultValue>
        <description>The name of sObject</description>
        <label>Level1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level2__c</fullName>
        <description>The name of the second sObject that should group the clusters</description>
        <label>Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level3__c</fullName>
        <description>The name of the second sObject that should group the clusters</description>
        <label>Level3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CB Cluster Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Index__c</columns>
        <columns>Level1__c</columns>
        <columns>Level2__c</columns>
        <columns>Level3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Cluster Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Cluster Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>